--- a/app/views/angular/app.html.erb
+++ b/app/views/angular/app.html.erb
@@ -9,7 +9,7 @@
         <div class='col-sm-8'>
           <div class='container-fluid'>
             <div class='row'><div class='col-xs-12'>
-              <kid-details></kid-details>
+              <kid-details-div></kid-details-div>
             </div>
             <div class='row'><div class='col-xs-12'>
               <div class="container-fluid" ng-app="kid-events" ng-controller="KidEventController">
