--- a/app/assets/javascripts/angular_app/directives/kids.js.erb
+++ b/app/assets/javascripts/angular_app/directives/kids.js.erb
@@ -8,7 +8,7 @@
     };
   });
 
-  app.directive("kidDetails", function() {
+  app.directive("kidDetailsDiv", function() {
     return {
       restrict: 'E',
       templateUrl: '<%= asset_path("angular_app/templates/kid-details.html") %>'
