--- a/app/views/angular/app.html.erb
+++ b/app/views/angular/app.html.erb
@@ -1,15 +1,15 @@
 <div ng-app='crummy'>
 
-  <div ng-controller="LoginController as loginCtrl">
+  <div class="mainBody" ng-controller="LoginController as loginCtrl">
     <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-     <h3>Crummy</h3>
-    </div>
-      <button type="button" class="btn btn-default navbar-btn pull-right"
-      ng-show="current_user" ng-click="loginCtrl.logout()">Sign Out</button>
-  </div>
-</nav>
+      <div class="container-fluid">
+        <div class="navbar-header">
+         <h3>Crummy</h3>
+        </div>
+        <button type="button" class="btn btn-default navbar-btn pull-right"
+        ng-show="current_user" ng-click="loginCtrl.logout()">Sign Out</button>
+      </div>
+   </nav>
   <login-form ng-hide="current_user"></login-form>
 
   </div>
