add edit controller for individual events

--- a/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
@@ -83,6 +83,8 @@
   });
 
   app.controller('DatepickerCtrl', function ($scope) {
+    $scope.date = new Date();
+
     $scope.open = function($event) {
       $event.preventDefault();
       $event.stopPropagation();
@@ -94,6 +96,10 @@
 
   app.controller('TimepickerCtrl', function ($scope, $log) {
     $scope.mytime = new Date();
+  });
+
+  app.controller('KidEditController', function ($scope){
+    $scope.showform = false;
   });
 
 })();
