add edit directive for edit form

--- a/app/assets/javascripts/angular_app/directives/events.js.erb
+++ b/app/assets/javascripts/angular_app/directives/events.js.erb
@@ -36,6 +36,13 @@
     };
   });
 
+  app.directive("eventEdit", function() {
+    return {
+      restrict: 'E',
+      templateUrl: '<%= asset_path("angular_app/templates/events/event-edit.html") %>'
+    };
+  });
+
   app.directive("eventForms", function() {
     return {
       restrict: 'E',
