--- a/app/views/angular/app.html.erb
+++ b/app/views/angular/app.html.erb
@@ -25,7 +25,7 @@
 
             </div>
             <div class='row'><div class='col-xs-12'>
-              <div class="container" ng-app="kid-events" ng-controller="KidEventController">
+              <div class="container-fluid" ng-app="kid-events" ng-controller="KidEventController">
                 <event-index></event-index>
                 <event-forms></event-forms>
               </div>
