--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -16,7 +16,7 @@
 					 <br>
 				  </strong>
 				</h3>
-			<button><%= link_to 'Access App', app_path %></button>
+				<%= link_to 'Access App', app_path, class: "btn btn-primary" %>
 			</div>
 		</div>
 	</div>
@@ -42,4 +42,3 @@
 		  </div>
   </div>
 </section>
-
