Improve Button on Front Page

--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -16,7 +16,7 @@
 					 <br>
 				  </strong>
 				</h3>
-				<%= link_to 'Access App', app_path, class: "btn btn-primary" %>
+				<h4><strong><button class="btn-lg btn-primary"><%= link_to 'Access App', app_path %> </button></stong></h4>
 			</div>
 		</div>
 	</div>
