--- a/app/assets/javascripts/angular_app/templates/events/event-edit.html
+++ b/app/assets/javascripts/angular_app/templates/events/event-edit.html
@@ -11,20 +11,20 @@
       <timepicker ng-model="mytime"></timepicker>
     </div>
   </label><br>
-  <label for="meds">Meds:<br>
-    <input type="text" name="meds" ng-model="event.meds">
+  <label ng-show="event.meds" for="meds">Meds:<br>
+    <input ng-show="event.meds" type="text" name="meds" ng-model="event.meds">
   </label><br>
-  <label for="description">Description:<br>
-    <input type="text" name="description" ng-model="event.description">
+  <label ng-show="event.description" for="description">Description:<br>
+    <input ng-show="event.description" type="text" name="description" ng-model="event.description">
   </label><br>
-  <label for="temperature">Temperature:<br>
-    <input type="text" name="temperature" ng-model="event.temperature">
+  <label ng-show="event.temperature" for="temperature">Temperature:<br>
+    <input ng-show="event.temperature" type="text" name="temperature" ng-model="event.temperature">
   </label><br>
-  <label for="height">Height:<br>
-    <input type="text" name="height" ng-model="event.height">
+  <label ng-show="event.height" for="height">Height:<br>
+    <input ng-show="event.height" type="text" name="height" ng-model="event.height">
   </label><br>
-  <label for="weight">Weight:<br>
-    <input type="text" name="weight" ng-model="event.weight">
+  <label ng-show="event.weight" for="weight">Weight:<br>
+    <input ng-show="event.weight" type="text" name="weight" ng-model="event.weight">
   </label><br>
   <input type="submit" value="Submit"/>
 </form>
