--- a/app/assets/javascripts/angular_app/templates/events/event-index.html
+++ b/app/assets/javascripts/angular_app/templates/events/event-index.html
@@ -19,7 +19,7 @@
       <h3 class="text-center">Type: {{event.type}}</h3>
       <h3 ng-show="event.meds">Meds: {{event.meds}}</h3>
       <h3>{{event.description}}</h3>
-      <h3 ng-show="event.temperature">{{event.temperature}} degrees</h3>
+      <h3 ng-show="event.temperature">{{event.temperature | number:1 }} degrees</h3>
       <h3 ng-show="event.height">Height: {{event.height}}</h3>
       <h3 ng-show="event.weight">Weight: {{event.weight}} lbs</h3>
       <a class="btn btn-primary btn-lg" ng-click="duplicate(event)">Duplicate</a>
