--- a/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
@@ -15,6 +15,10 @@
       $http.get('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events?auth_token=' + $rootScope.current_user.authentication_token)
         .success(function(data) {
           $scope.events = data;
+          $.each(data, function(i, event){
+            event.time = event.datetime;
+            event.temperature = Math.round(event.temperature * 10) / 10;
+          });
           $scope.events.sort(function(a,b) {
             if(a.datetime > b.datetime) {
               return 1;
@@ -28,8 +32,22 @@
     };
     kidChangeHandler.add($scope.index);
 
+    function setDateTimeFromDateAndTime(event) {
+      dt = event.datetime;
+      if(typeof(dt) == "string"){
+        dt = new Date(dt);
+      }
+      tm = event.time;
+      if(typeof(tm) == "string"){
+        tm = new Date(tm);
+      }
+      new_dt = new Date(dt.getFullYear(), dt.getMonth(), dt.getDate(), tm.getHours(), tm.getMinutes(), tm.getSeconds());
+      event.datetime = new_dt;
+    }
+
     $scope.create = function(form, type) {
       $scope.event.type = type;
+      setDateTimeFromDateAndTime($scope.event);
       $http.post('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events?auth_token=' + $rootScope.current_user.authentication_token, $scope.event)
         .success(function(data) {
           form.setForm(0);
@@ -49,6 +67,7 @@
     }
 
     $scope.edit = function(form, event) {
+      setDateTimeFromDateAndTime(event);
       $http.patch('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events/' + event.id + '?auth_token=' + $rootScope.current_user.authentication_token, event)
         .success(function(data) {
           form.setForm(0);
@@ -91,10 +110,6 @@
       $scope.opened = true;
     };
 
-  });
-
-  app.controller('TimepickerCtrl', function ($scope, $log) {
-    $scope.mytime = new Date();
   });
 
   app.controller('KidEditController', function ($scope){
