--- a/app/assets/javascripts/angular_app/templates/events/event-edit.html
+++ b/app/assets/javascripts/angular_app/templates/events/event-edit.html
@@ -7,9 +7,7 @@
         <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
       </span>
     </p>
-    <div ng-controller="TimepickerCtrl">
-      <timepicker ng-model="mytime"></timepicker>
-    </div>
+    <timepicker ng-model="event.time"></timepicker>
   </label><br>
   <label ng-show="event.meds" for="meds">Meds:<br>
     <input ng-show="event.meds" type="text" name="meds" ng-model="event.meds">
@@ -18,7 +16,7 @@
     <input ng-show="event.description" type="text" name="description" ng-model="event.description">
   </label><br>
   <label ng-show="event.temperature" for="temperature">Temperature:<br>
-    <input ng-show="event.temperature" type="text" name="temperature" ng-model="event.temperature">
+    <input ng-show="event.temperature" type="number" step="0.1" name="temperature" ng-model="event.temperature">
   </label><br>
   <label ng-show="event.height" for="height">Height:<br>
     <input ng-show="event.height" type="text" name="height" ng-model="event.height">
