--- a/app/assets/javascripts/angular_app/templates/events/event-new-symptom.html
+++ b/app/assets/javascripts/angular_app/templates/events/event-new-symptom.html
@@ -6,9 +6,7 @@
         <button type="button" style="float: left" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
       </span>
     </p>
-    <div ng-controller="TimepickerCtrl">
-      <timepicker ng-model="mytime"></timepicker>
-    </div>
+    <timepicker ng-model="event.time"></timepicker>
   </label>
   <label for="description">Description:<br>
     <input type="text" name="description" ng-model="event.description" ng-required="true">
