--- a/app/assets/javascripts/angular_app/templates/events/event_new.html
+++ b/app/assets/javascripts/angular_app/templates/events/event_new.html
@@ -6,9 +6,7 @@
         <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
       </span>
     </p>
-    <div ng-controller="TimepickerCtrl">
-      <timepicker ng-model="mytime"></timepicker>
-    </div>
+    <timepicker ng-model="event.time"></timepicker>
   </label><br>
   <label for="name">Name:<br>
     <input type="text" name="name" ng-model="event.name">
