increase font size for screenshot captions

--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -26,17 +26,17 @@
 	<div class="panel panel-primary">
 		<div class="panel-body text-center">
 				<div class="col-sm-4 ">
-			     Maintain important contact information.
+			     <h2>Maintain important contact information.</h2>
 			    <center> <%= image_tag 'screenshot.png' %> </center>
 			  </div>
 
 			  <div class="col-sm-4 ">
-			     Keep track of family members.
+			     <h2>Keep track of family members.</h2>
 			    <center> <%= image_tag 'kids.png' %> </center>
 		    </div>
 
 			  <div class="col-sm-4">
-			     Quickly add events relating to medical history.
+			     <h2>Quickly add events relating to medical history.</h2>
 			   <center>  <%= image_tag 'stats.png' %> </center>
 		  	</div>
 		  </div>
