--- a/app/assets/javascripts/angular_app/templates/login-form.html
+++ b/app/assets/javascripts/angular_app/templates/login-form.html
@@ -5,7 +5,7 @@
       <form style="padding: 30px;" name="loginForm">
         <div class="form-group">
           <label for="email">Email:</label>
-          <input class="form-control" type="text" id="email" ng-required="true" ng-model="loginCtrl.credentials.email">
+          <input class="form-control" type="email" id="email" ng-validate="email" ng-required="true" ng-model="loginCtrl.credentials.email">
         </div>
         <div class="form-group">
           <label for="password">Password:</label>
