make delete button gray--too many colors

--- a/app/assets/javascripts/angular_app/templates/kid-details.html
+++ b/app/assets/javascripts/angular_app/templates/kid-details.html
@@ -7,7 +7,7 @@
     <div class="container-fluid" ng-show='kidlist.current_kid'><div class="row">
       <button class="btn btn-default pull-right" ng-click='kiddetail.editing = true' ng-hide='kiddetail.editing'>Edit</button>
       <button class="btn btn-success pull-right" ng-click='kiddetail.update()' ng-show='kiddetail.editing'>Save Changes</button>
-      <button class="btn btn-danger pull-right" ng-click='kiddetail.delete()' ng-show='kiddetail.editing'>Delete Kid</button>
+      <button class="btn btn-default pull-right" ng-click='kiddetail.delete()' ng-show='kiddetail.editing'>Delete Kid</button>
       <div class="col-xs-6 form-inline">
         <div class="field">
           <label for='dob'>Date of Birth</label>
