--- a/app/assets/javascripts/angular_app/templates/events/event-edit.html
+++ b/app/assets/javascripts/angular_app/templates/events/event-edit.html
@@ -24,5 +24,7 @@
   <label ng-show="event.type == 'HeightWeight'" for="weight">Weight:<br>
     <input ng-show="event.type == 'HeightWeight'" type="text" name="weight" ng-model="event.weight">
   </label><br>
-  <input type="submit" value="Submit"/>
+  <div class="submit-buttons">
+    <input type="submit" class="btn btn-primary btn-sm" value="Submit"/>
+  </div>
 </form>
