--- a/app/assets/javascripts/angular_app/templates/events/event-new-medicine.html
+++ b/app/assets/javascripts/angular_app/templates/events/event-new-medicine.html
@@ -11,6 +11,8 @@
   <label for="meds">Meds:<br>
     <input type="text" name="meds" ng-model="event.meds" ng-required="true">
   </label><br>
-  <input type="submit" value="Submit"/>
-  <a ng-click="form.setForm(0); clearformdata()">Back</a>
+  <div class="submit-buttons">
+    <input class="btn btn-primary btn-sm" type="submit" value="Submit"/>
+    <a class="btn btn-primary btn-sm" ng-click="form.setForm(0); clearformdata()">Back</a>
+  </div>
 </form>
