--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -17,6 +17,10 @@
 				  </strong>
 				</h3>
 				<h4><strong><button class="btn-lg btn-primary"><%= link_to 'Access App', app_path %> </button></stong></h4>
+				<a href="https://itunes.apple.com/us/app/crummy/id1001415275?mt=8">
+					<%= render "angular/applelogo" %>
+				</a>
+
 			</div>
 		</div>
 	</div>
@@ -42,3 +46,4 @@
 		  </div>
   </div>
 </section>
+
